--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -15,7 +15,7 @@
     <script src="/static/js/awesome.js"></script>
 
     {% block beforehead %} <!-- block beforehead --> {% endblock %}
-    
+
 </head>
 
 <body>
@@ -65,9 +65,8 @@
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-linkedin-square"></a>
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
-                <p>Powered by <a href="#">Awesome Python Webapp</a>. Copyright &copy; 2014. [<a href="/manage/" target="_blank">Manage</a>]</p>
+                <p>Powered by <a href="#">Awesome Python Webapp</a>. Copyright &copy; 2014.</p>
                 <p><a href="http://www.liaoxuefeng.com/" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
-                <a target="_blank" href="#"><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
             </div>
         </div>
     </div>
