--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -66,7 +66,7 @@
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
                 <p>Powered by <a href="#">Awesome Python Webapp</a>. Copyright &copy; 2014.</p>
-                <p><a href="http://www.liaoxuefeng.com/" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
+                <p><a href="http://www.liaoxuefeng.com/" target="_blank">www.mytest.com</a>. All rights reserved.</p>
             </div>
         </div>
     </div>
