--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -12,6 +12,8 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/md5.js"></script>
     <script src="/static/js/uikit.min.js"></script>
+    <script src="/static/js/sticky.min.js"></script>
+    <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
 
     {% block beforehead %} <!-- block beforehead --> {% endblock %}
