--- a/www/templates/manage_blog_list.html
+++ b/www/templates/manage_blog_list.html
@@ -72,10 +72,10 @@ $(function() {
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
-                    <th class="uk-width-5-10">标题 / 摘要</th>
+                    <th class="uk-width-5-10">标题</th>
                     <th class="uk-width-2-10">作者</th>
                     <th class="uk-width-2-10">创建时间</th>
-                    <th class="uk-width-1-10">操作</th>
+                    <th class="uk-width-1-10">管理</th>
                 </tr>
             </thead>
             <tbody>
