--- a/www/templates/manage_blog_list.html
+++ b/www/templates/manage_blog_list.html
@@ -81,10 +81,10 @@ $(function() {
             <tbody>
                 <tr v-repeat="blog: blogs" >
                     <td>
-                        <a target="_blank" v-attr="href: '/blog/'+blog.id" v-text="blog.title"></a>
+                        <a target="_blank" v-attr="href: '/blogs/'+blog.id" v-text="blog.title"></a>
                     </td>
                     <td>
-                        <a target="_blank" v-attr="href: '/user/'+blog.user_id" v-text="blog.user_name"></a>
+                        <a target="_blank" v-attr="href: '/users/'+blog.user_id" v-text="blog.user_name"></a>
                     </td>
                     <td>
                         <span v-text="blog.created_at.toDateTime()"></span>
