-增加用户列表和评论列表页面

--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -26,8 +26,6 @@
             <a href="/" class="uk-navbar-brand">Awesome</a>
             <ul class="uk-navbar-nav">
                 <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> 日志</a></li>
-                <li><a target="_blank" href="https://github.com/michaelliao/awesome-python-webapp"><i class="uk-icon-book"></i> 教程</a></li>
-                <li><a target="_blank" href="https://github.com/michaelliao/awesome-python-webapp"><i class="uk-icon-code"></i> 源码</a></li>
             </ul>
             <div class="uk-navbar-flip">
                 <ul class="uk-navbar-nav">
@@ -69,7 +67,7 @@
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
                 <p>Powered by <a href="#">Awesome Python Webapp</a>. Copyright &copy; 2014.</p>
-                <p><a href="http://www.liaoxuefeng.com/" target="_blank">www.mytest.com</a>. All rights reserved.</p>
+                <p><a href="http://www.github.com/" target="_blank">www.mytest.com</a>. All rights reserved.</p>
             </div>
         </div>
     </div>
