--- a/www/templates/blog_detail.html
+++ b/www/templates/blog_detail.html
@@ -1,6 +1,6 @@
 {% extends '__base__.html' %}
 
-{% block title %}{{ blog.name }}{% endblock %}
+{% block title %}{{ blog.title }}{% endblock %}
 
 
 {% block beforehead %}
@@ -44,7 +44,6 @@ $(function(){
 
     {% if user %}
         <h3>发表评论</h3>
-
         <article class="uk-comment">
             <header class="uk-comment-header">
                 <img class="uk-comment-avatar uk-border-circle" width="50" height="50" src="{{ user.image }}">
