-页面增加字段

--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="uk-height-1-1">
+<html>
 <head>
     <meta charset="utf-8" />
     <title>登录 - Awesome Python Webapp</title>
@@ -50,7 +50,8 @@
         })
     </script>
 </head>
-<body class="uk-height-1-1">
+
+<body>
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
         <div class="uk-vertical-align-middle" style="width: 320px">
             <form id="form-signin" v-on="submit: submit" class="uk-panel uk-panel-box uk-form">
