--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -30,11 +30,13 @@
             <div class="uk-navbar-flip">
                 <ul class="uk-navbar-nav">
                 {% if user %}
-                    <li><a href="/manage/blogs"><i class="uk-icon-edit"></i> 管理日志</a></li>
                     <li class="uk-parent" data-uk-dropdown>
                         <a href="#0"><i class="uk-icon-user"></i> {{ user.name }}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
+                                {% if user.admin %}
+                                <li><a href="/manage/blogs"><i class="uk-icon-edit"></i> 管理</a></li>
+                                {% endif %}
                                 <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
                             </ul>
                         </div>
