--- a/www/templates/manage_blog_list.html
+++ b/www/templates/manage_blog_list.html
@@ -72,9 +72,10 @@ $(function() {
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
-                    <th class="uk-width-5-10">标题</th>
+                    <th class="uk-width-4-10">标题</th>
                     <th class="uk-width-2-10">作者</th>
-                    <th class="uk-width-2-10">创建时间</th>
+                    <th class="uk-width-3-10">创建时间</th>
+                    <!-- <th class="uk-width-2-10">最后回复</th> -->
                     <th class="uk-width-1-10">管理</th>
                 </tr>
             </thead>
@@ -89,6 +90,11 @@ $(function() {
                     <td>
                         <span v-text="blog.created_at.toDateTime()"></span>
                     </td>
+                    <!-- 
+                    <td>
+                        <span v-text="blog.latest_reply.toDateTime()"></span>
+                    </td>
+                    -->
                     <td>
                         <a href="#0" v-on="click: edit_blog(blog)"><i class="uk-icon-edit"></i>
                         <a href="#0" v-on="click: delete_blog(blog)"><i class="uk-icon-trash-o"></i>
@@ -96,6 +102,7 @@ $(function() {
                 </tr>
             </tbody>
         </table>
+
         <div class="uk-width-1-1 uk-text-center">
             <ul class="uk-pagination">
                 <li v-if="! page.has_previous" class="uk-disabled"><span><i class="uk-icon-angle-double-left"></i></span></li>
