--- a/www/templates/manage_comment_list.html
+++ b/www/templates/manage_comment_list.html
@@ -70,8 +70,9 @@ $(function() {
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
-                    <th class="uk-width-2-10">作者</th>
-                    <th class="uk-width-5-10">内容</th>
+                    <th class="uk-width-1-10">作者</th>
+                    <th class="uk-width-4-10">内容</th>
+                    <th class="uk-width-2-10">文章</th>
                     <th class="uk-width-2-10">创建时间</th>
                     <th class="uk-width-1-10">管理</th>
                 </tr>
@@ -83,6 +84,9 @@ $(function() {
                     </td>
                     <td>
                         <span v-text="comment.content"></span>
+                    </td>
+                    <td>
+                        <span v-text="comment.blog_title"></span>
                     </td>
                     <td>
                         <span v-text="comment.created_at.toDateTime()"></span>
