--- a/www/templates/manage_user_list.html
+++ b/www/templates/manage_user_list.html
@@ -58,9 +58,10 @@ $(function() {
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
-                    <th class="uk-width-4-10">名字</th>
-                    <th class="uk-width-4-10">电子邮件</th>
+                    <th class="uk-width-3-10">名字</th>
+                    <th class="uk-width-3-10">电子邮件</th>
                     <th class="uk-width-2-10">注册时间</th>
+                    <th class="uk-width-2-10">上次登录</th>
                 </tr>
             </thead>
             <tbody>
@@ -74,6 +75,9 @@ $(function() {
                     </td>
                     <td>
                         <span v-text="user.created_at.toDateTime()"></span>
+                    </td>
+                    <td>
+                        <span v-text="user.last_login.toDateTime()"></span>
                     </td>
                 </tr>
             </tbody>
