-增加用户信息页面

--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -6,15 +6,16 @@
 <script>
 var action = "{{ action }}";
 var redirect = "{{ redirect }}";
+
 var vm;
 
 $(function () {
     vm = new Vue({
         el: '#form-blog',
         data: {
-            title: '',
-            summary: '',
-            content: ''
+            title: "{{ title }}",
+            summary: "",
+            content: ""
         },
         methods: {
             submit: function (event) {
