--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -31,7 +31,7 @@
                 <ul class="uk-navbar-nav">
                 {% if user %}
                     <li class="uk-parent" data-uk-dropdown>
-                        <a href="#0"><i class="uk-icon-user"></i> {{ user.name }}</a>
+                        <a href="/users/{{ user.id }}"><i class="uk-icon-user"></i> {{ user.name }}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
                                 {% if user.admin %}
